# Bugatti-miniatures

./: .gitignore  CLAUDE.md  Database-Bugatti-Miniatures.xlsx  FICHE-MAINTENANCE.md  app.py  fetch_photos.py  install.sh  pyproject.toml  requirements.txt
bugatti_app/: __init__.py  analytics.py  paths.py  security.py  store.py
config/: analytics_exclude.json
data/: admin_reset.json  site_content.json
data/_seed/: collection.seed.json  convert_data.py
static/: data.json
static/css/: admin.css  style.css
static/fonts/: fonts.css
static/img/types/: manifest.json
static/js/: admin.js  app.js
templates/: index.html
