[project]
name = "les-bugatti-de-pascal"
version = "1.0.0"
description = "Les Bugatti de Pascal — vitrine web d'une collection de miniatures Bugatti, avec zone d'administration."
authors = [
    {name = "J-B de Fromont"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]

[tool.poetry]
package-mode = false

# openpyxl n'est utile qu'aux scripts d'amorçage archivés (data/_seed/), pas au site.
[tool.poetry.group.dev.dependencies]
openpyxl = ">=3.1.5,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
